@@ -5,6 +5,10 @@
 	fails if graphwin.hInstance equals NULL.
 	Patch #1627936
 
+	* src/plot2d.c (store2d_point):  If the plot uses palette colors taken
+	from the Z coordinate, then also use Z to auto-scale cbrange.
+	Bug #2133407
+
 2009-07-19  Jérôme Lodewyck <lodewyck@users.sourceforge.net>	
 
 	Add a Qt terminal, which can either act as a standalone interactive
